--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
 cmake_minimum_required (VERSION 2.6)
 project (Rechteckspackung)
 
-add_executable(Rechteckspackung sweepline.cpp rectangle.cpp net.cpp)
+set (CMAKE_CXX_STANDARD 11)
+
+add_executable(Rechteckspackung main.cpp packing.cpp rectangle.cpp net.cpp)
