Warnings and Debug flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project (Rechteckspackung)
 
 set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_BUILD_TYPE Debug)
+include(Warnings.cmake) 
 
 add_executable(rechteckspackung.out main.cpp packing.cpp rectangle.cpp net.cpp bitmap.cpp)
