--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set (CMAKE_CXX_STANDARD 11)
 set (CMAKE_BUILD_TYPE Debug)
 include(Warnings.cmake) 
 
-add_executable(rechteckspackung.out main.cpp packing.cpp rectangle.cpp net.cpp bitmap.cpp min_cost_flow.h min_cost_flow.cpp)
+add_executable(rechteckspackung.out main.cpp packing.cpp rectangle.cpp net.cpp bitmap.cpp min_cost_flow.cpp common.h)
